# kyzo

./: .dockerignore  .gitignore  BANNED.md  CHANGELOG.md  CLAUDE-AND-CURSOR-HANDOFF.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FORK.md  HANDOFF.md  LICENSE-BSL  LICENSING.md  README.md  REFACTOR.md  RELEASING.md  SECURITY.md  THE-CUT.md  VERSIONING.md  deny.toml  docker-compose.yml  falsifier-map.toml  justfile  map.json  resonance-allow.toml  rust-toolchain.toml
crates/bs-detector/: Cargo.toml  checks.toml  pester-hook.txt  waivers.toml
crates/bs-detector/src/: boundary.rs  lib.rs  main.rs  policy.rs  registry.rs  run.rs  waiver.rs
crates/bs-detector/src/engines/: graph.rs  meta.rs  mod.rs  shape.rs
crates/bs-detector/tests/: bite_proofs.rs
crates/kyzo-arrow-interop/: Cargo.toml
crates/kyzo-arrow-interop/src/: lib.rs
crates/kyzo-arrow-interop/tests/: decode_kyzo_stream.rs
crates/kyzo-bin/: Cargo.toml
crates/kyzo-bin/src/: bulk.rs  engine.rs  main.rs  security.txt
crates/kyzo-bin/src/repl/: commands.rs  editor.rs  fetch.rs  mod.rs  render.rs
crates/kyzo-bin/src/server/: auth.rs  bulk.rs  changes.rs  feeds.rs  mod.rs  payload_wire.rs  query.rs  rules.rs  standing.rs
crates/kyzo-crashfs/: Cargo.toml
crates/kyzo-crashfs/src/: fault.rs  harness.rs  identity.rs  lib.rs  passthrough.rs  sim.rs
crates/kyzo-crashfs/tests/: standalone_mount.rs
crates/kyzo-lsp/: Cargo.toml
crates/kyzo-lsp/src/: main.rs  translate.rs
crates/kyzo-model/: Cargo.toml
crates/kyzo-model/src/: format.rs  lib.rs  typestate.rs
crates/kyzo-model/src/envelope/: arrow.rs  json.rs  mod.rs
crates/kyzo-model/src/format/: tests.rs
crates/kyzo-model/src/parse/: expr.rs  grammar.pest  mod.rs  query.rs  schema.rs  script.rs  search.rs  sys.rs
crates/kyzo-model/src/program/: aggregate.rs  expr.rs  mod.rs  op.rs  query.rs  rule.rs  span.rs  symbol.rs  wire.rs
crates/kyzo-model/src/schema/: column.rs  mod.rs  relation.rs
crates/kyzo-model/src/value/: arena.rs  bytes_qty.rs  canonical.rs  cell.rs  code.rs  column.rs  convert.rs  exec.rs  json_convert.rs  mod.rs  number.rs  prefix.rs  proofs.rs  row.rs  search_hits.rs  string.rs  tag.rs  test_rng.rs  validity_coerce.rs
crates/kyzo-oracle/: Cargo.toml
crates/kyzo-oracle/src/: eval.rs  incremental.rs  lib.rs  temporal.rs
crates/kyzo-trials/: Cargo.toml
crates/kyzo-trials/rehomed_from_core/: README.md  compile_tests.rs  fixpoint_eval_tests.rs  incremental_laws.rs  normalize_tests.rs
crates/kyzo-trials/src/: campaign.rs  conformance.rs  crash.rs  determinism.rs  dst.rs  fuzz.rs  gauntlet.rs  lib.rs  live_door.rs  provenance.rs  serializability.rs  verify_differential.rs
crates/kyzo-trials/src/time_travel/: mod.rs  path.rs  script.rs
crates/kyzo-trials/tests/: conformance_public.rs  forge_wall.rs
crates/kyzo-trials/tests/compile_fail/: forge_wall_encode_mint_kyzo_record.rs  forge_wall_encode_mint_kyzo_record.stderr  forge_wall_store_mint_kyzo_record.rs  forge_wall_store_mint_kyzo_record.stderr  forge_wall_wal_sst_mint_kyzo_record.rs  forge_wall_wal_sst_mint_kyzo_record.stderr
crates/xtask/: Cargo.toml  agreements.toml  authority-allowlist.json  authority-baseline.json  decode-surfaces.toml  gate-fast.sh  resonance-watch.sh  unchecked-arith-baseline.json
crates/xtask/src/: allowlist.rs  cargo_meta.rs  fsutil.rs  gate.rs  main.rs  proc.rs  resonance.rs  verbs.rs
crates/xtask/src/checks/: agreement_registry.rs  allocation_admission.rs  authority_graph.rs  banned_path.rs  boundary_closure.rs  mod.rs  (+12 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare_prefixed_slice.rs  data_block.rs  fact_payload_decode.rs  index_block.rs  kyzoscript_parser.rs  memcmp_codec.rs  table_read.rs
kyzo-core/: Cargo.toml
kyzo-core/benches/: db_scan.rs  ra_exec.rs  storage.rs  string_eq.rs
kyzo-core/examples/: determinism_digest.rs  hnsw_build_profile.rs  language_tour.rs  lsm_keyspace_policy_bench.rs  ra_determinism.rs  ra_profile.rs  standing_smoke.rs  tc_regress.rs
kyzo-core/proptest-regressions/parse/: fuzz_tests.txt
kyzo-core/proptest-regressions/query/: eval.txt
kyzo-core/src/: bench_api.rs  format.rs  fuzz_api.rs  jepsen_trials.rs  kyzoscript.pest  lib.rs  lsp_api.rs
kyzo-core/src/data/: aggr.rs  arrow_ipc.rs  batch.rs  bitemporal.rs  expr.rs  fact_payload.rs  functions.rs  json.rs  memcmp.rs  mod.rs  program.rs  relation.rs  span.rs  symb.rs  tuple.rs  value.rs
kyzo-core/src/engines/: fts.rs  gazetteer.rs  gazetteer_hostile.rs  hnsw.rs  hnsw_filter_harness.rs  lsh.rs  mod.rs  segments.rs  sparse.rs  sparse_hostile.rs  spatial.rs
kyzo-core/src/fixed_rule/: mod.rs
kyzo-core/src/format/: tests.rs
kyzo-core/src/fts/: ast.rs  mod.rs
kyzo-core/src/parse/: expr.rs  fts.rs  fuzz_tests.rs  imperative.rs  mod.rs  query.rs  schema.rs  sys.rs
kyzo-core/src/query/: batch_ops.rs  compile.rs  dst_query.rs  eval.rs  gauntlet.rs  graph.rs  incremental.rs  laws.rs  levels.rs  magic.rs  mod.rs  normalize.rs  provenance.rs  ra.rs  search.rs  semiring.rs  sort.rs  standing.rs  stored.rs  stratify.rs  temp_store.rs  time_travel_script_laws.rs  time_travel_trials.rs  trials.rs  vm.rs
kyzo-core/src/runtime/: callback.rs  constraint.rs  db.rs  db_battery.rs  fts_index.rs  gazetteer.rs  gazetteer_hostile.rs  hnsw.rs  hnsw_filter_harness.rs  index.rs  json.rs  minhash_lsh.rs  mod.rs  mutate.rs  relation.rs  sparse_hostile.rs  sparse_index.rs  spatial_index.rs  temp_store.rs  verify.rs
kyzo-core/src/storage/: backup.rs  conformance.rs  crash_matrix.rs  fjall.rs  merkle.rs  mod.rs  retry.rs  sim.rs  skip_walk.rs  temp.rs  tests.rs  verify.rs
kyzo-core/tests/: adversarial_robustness.rs  aggregation.rs  data_types.rs  public_api_surface.rs  relational_core.rs  standing_queries.rs  storage_allocation_law.rs  time_travel.rs  unified_scenario.rs  vector_and_fts.rs
kyzo-core/tests/common/: mod.rs
xtask/: Cargo.toml  agreements.toml  decode-surfaces.toml
xtask/src/: allowlist.rs  fsutil.rs  main.rs  synutil.rs
xtask/src/checks/: agreement_registry.rs  copy_detector.rs  dead_code_ratchet.rs  derive_bypass.rs  mod.rs  panic_lint.rs
(+847 files in other folders)
