[workspace]
resolver = "3"
# xtask (story #81, the resonance gate) and kyzo-arrow-interop (story #77's
# Arrow cross-check, see its own Cargo.toml) are dev tooling only: neither is
# part of the shipped engine tree. `cargo xtask pure-rust` gates only the
# kyzo/kyzo-bin dependency trees (`cargo tree -p kyzo|kyzo-bin`), so xtask's
# syn/quote/proc-macro2 and kyzo-arrow-interop's real `arrow` dependency never
# reach the purity gate.
# vendor/fjall and vendor/lsm-tree (story #118): the upstream fjall-rs/fjall and
# fjall-rs/lsm-tree 3.1.5 sources, vendored verbatim (MIT/Apache-2.0 headers
# preserved) as workspace members. [patch.crates-io] below routes every consumer
# (kyzo-core's `fjall` dep and fjall's own internal `lsm-tree` edge) onto this
# tree. This is the fork the story owns; the engine edits land here.
members = ["crates/kyzo-core", "crates/kyzo-bin", "crates/xtask", "crates/kyzo-crashfs", "crates/kyzo-lsp", "crates/kyzo-arrow-interop", "vendor/fjall", "vendor/lsm-tree"]

[workspace.package]
version = "0.8.2"
edition = "2024"
rust-version = "1.93"
license = "MPL-2.0"
homepage = "https://github.com/kyzodb/kyzo"
repository = "https://github.com/kyzodb/kyzo"
readme = "README.md"
keywords = ["database", "datalog", "graph", "vector-search", "embedded"]
categories = ["database-implementations", "algorithms", "data-structures"]

# Routes every consumer of these crates.io names onto the vendored fork above,
# including fjall's own internal `lsm-tree` dependency edge.
[patch.crates-io]
fjall = { path = "vendor/fjall" }
lsm-tree = { path = "vendor/lsm-tree" }

[profile.release]
lto = "thin"

# `cargo build`/`cargo test --release` (the whole suite's normal gate, and the
# form CI runs) silently wraps on arithmetic overflow: `[profile.release]`'s
# own Cargo default is `overflow-checks = false`, and `debug_assert!` is a
# no-op there too (`debug-assertions = false`). Story #88 (0.9.0 bug-hunting):
# a corruption bug that slipped past every existing test lived in code no
# test exercised, at release speed. Rather than turn overflow-checks on for
# every real release build (a genuine perf cost this engine should not pay in
# production), this is a SEPARATE named profile inheriting release's
# optimization settings, run as an additional verification pass over the
# whole suite (`cargo test -p kyzo --profile release-checked`) — release-speed
# enough not to need `cargo test`'s (dev-profile) runtime, but with both
# overflow-checks and the new debug_assert! invariants live.
[profile.release-checked]
inherits = "release"
overflow-checks = true
debug-assertions = true
