[workspace]
resolver = "3"
# xtask (story #81, the resonance gate) and kyzo-arrow-interop (story #77's
# Arrow cross-check, see its own Cargo.toml) are dev tooling only: neither is
# part of the shipped engine tree. `cargo xtask pure-rust` gates only the
# kyzo/kyzo-bin dependency trees (`cargo tree -p kyzo|kyzo-bin`), so xtask's
# syn/quote/proc-macro2 and kyzo-arrow-interop's real `arrow` dependency never
# reach the purity gate.
# vendor/fjall and vendor/lsm-tree (story #118): the upstream fjall-rs/fjall and
# fjall-rs/lsm-tree 3.1.5 sources, vendored verbatim (MIT/Apache-2.0 headers
# preserved) as workspace members. [patch.crates-io] below routes every consumer
# (kyzo-core's `fjall` dep and fjall's own internal `lsm-tree` edge) onto this
# tree. This is the fork the story owns; the engine edits land here.
members = ["crates/kyzo-core", "crates/kyzo-bin", "crates/xtask", "crates/kyzo-crashfs", "crates/kyzo-lsp", "crates/kyzo-arrow-interop", "vendor/fjall", "vendor/lsm-tree"]

[workspace.package]
version = "0.8.2"
edition = "2024"
rust-version = "1.93"
license = "MPL-2.0"
homepage = "https://github.com/kyzodb/kyzo"
repository = "https://github.com/kyzodb/kyzo"
readme = "README.md"
keywords = ["database", "datalog", "graph", "vector-search", "embedded"]
categories = ["database-implementations", "algorithms", "data-structures"]

# Routes every consumer of these crates.io names onto the vendored fork above,
# including fjall's own internal `lsm-tree` dependency edge.
[patch.crates-io]
fjall = { path = "vendor/fjall" }
lsm-tree = { path = "vendor/lsm-tree" }

[profile.release]
lto = "thin"
