[workspace]
resolver = "3"
# xtask (story #81, the resonance gate) and kyzo-arrow-interop (story #77's
# Arrow cross-check, see its own Cargo.toml) are dev tooling only: neither is
# part of the shipped engine tree. `cargo xtask pure-rust` gates only the
# kyzo/kyzo-bin dependency trees (`cargo tree -p kyzo|kyzo-bin`), so xtask's
# syn/quote/proc-macro2 and kyzo-arrow-interop's real `arrow` dependency never
# reach the purity gate.
# vendor/fjall and vendor/lsm-tree (story #118): the upstream fjall-rs/fjall and
# fjall-rs/lsm-tree 3.1.5 sources, forked as first-party workspace members
# (MIT/Apache-2.0 headers preserved). They are PUBLISHED under our own package
# names — `kyzo-fjall` / `kyzo-lsm-tree` — so a published `kyzo` binds our fork,
# not upstream (which lacks our engine edits). The `[lib] name` stays
# `fjall`/`lsm-tree`, so consumers `use fjall::` unchanged via the dependency
# `package =` rename key. No `[patch.crates-io]` — that trick could never
# publish (cargo strips it; a published crate would bind upstream fjall).
members = [
    "crates/kyzo-core",
    "crates/kyzo-bin",
    "crates/kyzo-model",
    "crates/kyzo-trials",
    "crates/kyzo-oracle",
    "crates/xtask",
    "crates/kyzo-crashfs",
    "crates/kyzo-lsp",
    "crates/kyzo-arrow-interop",
    "vendor/fjall",
    "vendor/lsm-tree",
]

[workspace.package]
version = "0.8.2"
edition = "2024"
rust-version = "1.93"
license = "MPL-2.0"
homepage = "https://github.com/kyzodb/kyzo"
repository = "https://github.com/kyzodb/kyzo"
readme = "README.md"
keywords = ["database", "datalog", "graph", "vector-search", "embedded"]
categories = ["database-implementations", "algorithms", "data-structures"]

[profile.release]
lto = "thin"

# `cargo build`/`cargo test --release` silently wraps on arithmetic overflow:
# `[profile.release]`'s own Cargo default is `overflow-checks = false`. Rather
# than pay the overflow-check cost on every real release build, this profile
# runs the whole test suite again at release speed with both overflow-checks
# and debug-assertions live — the mechanical proof that no raw stored-byte
# arithmetic slipped past the T2 quantity types. The blanket `overflow-checks`
# toggle lives here as a fuzzing safety net only; it is not the correctness
# mechanism. The correctness mechanism is the gate step that runs under this
# profile on every `cargo xtask gate` invocation and in CI.
[profile.release-checked]
inherits = "release"
overflow-checks = true
debug-assertions = true

# Panic-lint rung (joined here from e:panic-discipline's table): sealed-enum
# matches must name remaining variants — a hurried `_` silently absorbs new
# refusal/kind arms. Packages opt in with `[lints] workspace = true`.
[workspace.lints.clippy]
wildcard_enum_match_arm = "deny"

# miette::bail!/ensure! still expand with a trailing `;` (unfixed upstream as of
# 7.6.0). Nightly denies `semicolon_in_expressions_from_macros` (rust#144369),
# which breaks `cargo +nightly fuzz` / fuzz-smoke on expression-position uses
# (`_ => bail!(...)`). Allow until miette drops the trailing semicolon.
[workspace.lints.rust]
semicolon_in_expressions_from_macros = "allow"
