[package]
name = "kyzo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "KyzoDB storage engine core: a pure-Rust fork of CozoDB"

[dependencies]
miette = { version = "7", features = ["fancy"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.199" }
serde_derive = "1.0.199"
serde_bytes = "0.11.14"
rmp-serde = "1.3"
base64 = "0.22.0"
ordered-float = "5"
byteorder = "1.5.0"
itertools = "0.15"
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
ndarray = { version = "0.17", features = ["serde"] }
sha2 = "0.10.8"
fjall = "3.1.5"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = "0.8.2"

[[bench]]
name = "storage"
harness = false
