[package]
name = "kyzo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "KyzoDB storage engine core: a pure-Rust fork of CozoDB"

[dependencies]
# Index-operator tier (both pure Rust). twox-hash: XxHash32 for MinHash-LSH
# signatures (2.x re-exports XxHash32 with the with_seed/Hasher API; already
# in-tree transitively via fjall). quadrature: numeric integration for the
# LSH optimal-band parameter search (single-file crate, no dependencies).
twox-hash = "2"
quadrature = "0.1.2"
miette = { version = "7", features = ["fancy"] }
smartstring = { version = "1.0.1", features = ["serde"] }
serde_json = "1.0.116"
serde = { version = "1.0.199" }
rand = "0.9"
serde_derive = "1.0.199"
casey = "0.4"
# Date/time layer. `default-features = false` + `tzdb-bundle-always` compiles a
# pinned IANA tz database into the binary (host-independent, always available),
# matching the model chrono-tz gave us: no reads of the host's /usr/share/zoneinfo,
# so `format_timestamp(x, "Asia/Shanghai")` is deterministic across build hosts and
# minimal targets. Pure Rust; `jiff-tzdb` is data, not a C dependency.
jiff = { version = "0.2.31", default-features = false, features = ["std", "perf-inline", "tzdb-bundle-always"] }
unicode-normalization = "0.1"
fast2s = "0.3"
thiserror = "2.0.14"
serde_bytes = "0.11.14"
rmp-serde = "1.3"
base64 = "0.22.0"
ordered-float = "5"
byteorder = "1.5.0"
itertools = "0.15"
regex = "1.10.4"
uuid = { version = "1.8.0", features = ["v1", "v4", "serde"] }
ndarray = { version = "0.17", features = ["serde"] }
sha2 = "0.11.0"
fjall = "3.1.5"
# Fixed-rule tier (both pure Rust end-to-end):
# csv → csv-core/itoa/ryu/serde; priority-queue → indexmap/equivalent/hashbrown.
csv = "1.3"
priority-queue = "2"
# FTS tokenizer tier (all pure Rust; see fts/tokenizer/mod.rs for provenance).
aho-corasick = "1.1"     # SplitCompoundWords automaton (already in-tree via regex)
# Pinned EXACTLY: 0.7.1+ (through at least 0.10.x) compresses its embedded
# dictionary via `include-flate`, whose default codec set drags in `zstd` →
# `zstd-sys` → a C compiler, which the pure-Rust gate rightly refuses.
# 0.7.0 embeds the dict uncompressed and its whole tree is pure Rust (it is
# also the exact version the CozoDB base pinned). Bumping this requires
# either upstream making the codec opt-out or vendoring the dictionary.
jieba-rs = "=0.7.0"      # Cangjie Chinese tokenizer (embedded dict, pure Rust)
rust-stemmers = "1.2"    # Snowball stemmers, generated Rust, no FFI
rustc-hash = "2"         # FxHashSet for stopword sets / unique n-grams
pest = "2"
pest_derive = "2"

# Pure Rust. The per-stratum rule batch of query/eval.rs runs on rayon
# everywhere except wasm32, as in the CozoDB original.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[features]
# Exposes `bench_api`, an opaque façade over the internal query pipeline for
# the RA-layer criterion benches (benches/ra_exec.rs). Not part of the public
# surface; enabled only by `cargo bench`/`cargo test` invocations that name it.
bench-internals = []

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = "0.8.2"

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "ra_exec"
harness = false
required-features = ["bench-internals"]

[[example]]
name = "ra_profile"
required-features = ["bench-internals"]

[[example]]
name = "ra_determinism"
required-features = ["bench-internals"]
