[package]
name = "kyzo-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
description = "KyzoDB naive reference-semantics seat. Empty scaffold until relocate fills it."

[lints]
workspace = true
