[package]
name = "kyzo-trials"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
description = "KyzoDB adversarial campaigns seat — Cap1–4 gauntlet, provenance, time-travel, oracle-differential verify."

[lints]
workspace = true

[dependencies]
kyzo = { path = "../kyzo-core", features = ["bench-internals"] }
kyzo-model = { path = "../kyzo-model" }
kyzo-oracle = { path = "../kyzo-oracle" }
miette = { version = "7", features = ["fancy"] }
thiserror = "2.0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

[dev-dependencies]
kyzo = { path = "../kyzo-core", features = ["bench-internals"] }
tempfile = "3"
proptest = "1"
itertools = "0.15"
smartstring = { version = "1.0.1", features = ["serde"] }
