[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Story #322: the gate program — one door, entered through the container, that every caller (developer, agent, hook, CI) runs to get a verdict. Conduct policing lives in the bs-detector crate (its own verb runs it); xtask keeps the build/test/supply-chain verbs. Never shipped: dev tooling only."

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
# The authority-graph verb's committed artifacts (story #322: ported from
# scripts/authority-graph.py) and its allowlist/baseline inputs.
serde_json = "1"
anyhow = "1"
# The verb CLI (story #322): closed subcommand dispatch, one variant per verb.
clap = { version = "4", features = ["derive"] }
# The unsafe/pure-rust/authority verbs' own drift patterns (story #322:
# ported from the condemned shell/python scripts' grep/re usage).
regex = "1"
# The authority-graph verb's self-test fixture tree (story #322: ported
# from scripts/authority-graph.py's --self-test).
tempfile = "3"
